# academy-manage

backend/: .env  README.md  api.md  pyproject.toml  requirements.txt  run.sh  study_room.db  study_room.db.backup
backend/app/: main.py
backend/app/api/: attendance.py  payments.py  students.py
backend/app/database/: connection.py
backend/app/models/: __init__.py  attendance.py  payment.py  student.py
backend/app/schemas/: attendance.py  payment.py  student.py
backend/app/utils/: date_calculator.py
frontend/: PWA_README.md  README.md  package-lock.json  package.json  tailwind.config.js
frontend/public/: manifest.json  sw.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/attendance/: page.tsx
frontend/src/app/calendar/: page.tsx
frontend/src/app/notifications/: page.tsx
frontend/src/app/payments/: page.tsx
frontend/src/app/students/: page.tsx
frontend/src/components/attendance/: AttendanceItem.tsx  AttendanceList.tsx  AttendanceStats.tsx  BulkActions.tsx  DatePicker.tsx  OfflineAttendanceManager.tsx
frontend/src/components/calendar/: CalendarDay.tsx  CalendarLegend.tsx  DayDetailModal.tsx  MonthlyCalendar.tsx  UpcomingEvents.tsx
frontend/src/components/dashboard/: AlertCenter.tsx  QuickActions.tsx  StatCard.tsx  TodayOverview.tsx
frontend/src/components/layout/: BottomNavigation.tsx  Footer.tsx  Header.tsx  Navigation.tsx
frontend/src/components/offline/: OfflineStatus.tsx
frontend/src/lib/: api.ts  offline-db.ts  offline-sync.ts  pwa.ts  types.ts  utils.ts
frontend/src/styles/: .globals.css.swp  globals.css
(+15 files in other folders)
