[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "python-dotenv",
    "python-multipart",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "pydantic[email]"
]
